@startuml

title __TEAGASPACKAGE's Class Diagram__\n

  namespace teagaspackage {
    class teagaspackage.Diamond {
        ~ name : String
        + create()
        + createMicrocontroller()
        + createName()
        + toString()
    }
  }
  

  namespace teagaspackage {
    class teagaspackage.Gold {
        ~ name : String
        + create()
        + createMicrocontroller()
        + createName()
        + toString()
    }
  }
  

  namespace teagaspackage {
    class teagaspackage.Platinum {
        ~ name : String
        + create()
        + createMicrocontroller()
        + createName()
        + toString()
    }
  }
  

  namespace teagaspackage {
    class teagaspackage.Silver {
        ~ name : String
        + create()
        + createMicrocontroller()
        + createName()
        + toString()
    }
  }
  

  namespace teagaspackage {
    interface teagaspackage.TeaGASPackage {
        {abstract} + create()
        {abstract} + createMicrocontroller()
        {abstract} + createName()
    }
  }
  

  namespace teagaspackage {
    class teagaspackage.TeaGASPackageFactory {
        {static} + getTeaGASPackage()
    }
  }
  

  teagaspackage.Diamond .up.|> teagaspackage.TeaGASPackage
  teagaspackage.Diamond o-- microcontroller.Microncontroller : microncontroller
  teagaspackage.Gold .up.|> teagaspackage.TeaGASPackage
  teagaspackage.Gold o-- microcontroller.Microncontroller : microncontroller
  teagaspackage.Platinum .up.|> teagaspackage.TeaGASPackage
  teagaspackage.Platinum o-- microcontroller.Microncontroller : microncontroller
  teagaspackage.Silver .up.|> teagaspackage.TeaGASPackage
  teagaspackage.Silver o-- microcontroller.Microncontroller : microncontroller


right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
